# time_to_pudge

./: .env_example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/notebooks/: ingest.ipynb  multi_questions.json
backend/rutube_bot/: __init__.py  __main__.py
backend/rutube_bot/config/: __init__.py  default.py  utils.py
backend/rutube_bot/endpoints/: __init__.py  health_check.py  predict.py
backend/rutube_bot/schemas/: __init__.py  health_check.py  questions.py
backend/rutube_bot/utils/chains/: __init__.py  rag.py
backend/rutube_bot/utils/common/: __init__.py  hostname.py
tg_bot/: Dockerfile
tg_bot/tg_bot/: __main__.py
