[tool.poetry]
name = "time-to-pudge"
version = "0.1.0"
description = ""
authors = ["Trubberov <timofey.bokach.d@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
langserve = {extras = ["all"], version = "^0.3.0"}
pydantic = "^2.9.2"
langchain = "^0.3.1"
langsmith = "^0.1.129"
pandas = "^2.2.3"
langchain-huggingface = "^0.1.0"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.2.1"
langchain-community = "^0.3.1"
langchain-ollama = "^0.2.0"
einops = "^0.8.0"
redis = "^5.1.0"
jinja2 = "^3.1.4"
openai = "^1.50.2"
pysqlite3-binary = "^0.5.3.post1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
